# traffic-shaping-router

./: README.md
src/: CMakeLists.txt  Makefile  async_queue.hpp  burst_filter.hpp  connectionEntry.hpp  connectionTuple.hpp  connection_entry.hpp  connection_tuple.hpp  filter.hpp  filter_tests.cpp  main.cpp  nat.cpp  nat.hpp  output.cpp  output.hpp  packet.cpp  packet.hpp  packet6.cpp  packet6.hpp  parent_packet.hpp  router.cpp  router.hpp  shaper.cpp  shaper.hpp  structures.h  tbf_filter.hpp  test_main.cpp  test_router.cpp  tpService.cpp  tpService.hpp  tp_service.cpp
src/filters/: CMakeLists.txt  burst_filter.hpp  connection_entry.hpp  connection_tuple.hpp  dynamic_delay.cpp  dynamic_delay.hpp  dynamic_loss.cpp  dynamic_loss.hpp  input.hpp  input_drop.hpp  nat.cpp  nat.hpp  nat_filters.cpp  nat_filters.hpp  nat_mapper.cpp  nat_mapper.hpp  output.cpp  output.hpp  output6_libnet.cpp  output6_libnet.hpp  output_libnet.cpp  output_libnet.hpp  shaper.cpp  shaper.hpp  tbf_filter.hpp
test/compose/: docker-compose.yml  tester.sh
test/ipv6Compose/: docker-compose.yml  tester.sh
test/ping_node/: Dockerfile  dump.sh  entrypoint.sh  ping.sh  ping6.sh
test/router_node/: Dockerfile  entrypoint.sh  named.conf.options  nat64.sh  router.sh  tayga.conf
test/stun_test/: README.md  docker-compose.yml  tester.sh
test/stun_test/stunnode/: Dockerfile  entrypoint.sh  inet_router.sh  iptables_router.sh  router.sh  shaping_router.sh  stun.sh  stunclient.sh
